# image-to-bookshelf-pipeline

./: .gitignore  README.md  backend-user-data-architecture-plan.md  image-pipeline-plan.md  lookup_outputs.csv  package-lock.json  package.json  pyproject.toml  reactApp_plan.md  requirements.txt
.github/workflows/: ci.yml
apps/backend/: README.md  pyproject.toml  ruff.toml
apps/backend/migrations/: README  env.py
apps/backend/migrations/versions/: 0001_initial_schema.py
apps/backend/scripts/: migrate-down.sh  migrate-up.sh
apps/backend/src/bookshelf_backend/: __init__.py  cli.py  extractor.py  utils.py  web_api.py
apps/backend/src/bookshelf_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/backend/src/bookshelf_backend/app/: __init__.py  factory.py  runtime.py
apps/backend/src/bookshelf_backend/config/: __init__.py  settings.py
apps/backend/src/bookshelf_backend/db/: __init__.py  extension.py  service.py
apps/backend/src/bookshelf_backend/routes/: __init__.py  health.py  library.py  scan.py  search.py
apps/backend/src/bookshelf_backend/services/: __init__.py  detector_service.py  extractor_service.py  google_books_service.py
apps/backend/tests/: conftest.py  test_detector.py  test_extractor.py  test_library_api.py  test_lookup.py  test_migrations.py  test_settings_guard.py  test_web_api.py
apps/client/: README.md  metro.config.js  package-lock.json  package.json  tsconfig.json
data/: 3F32DD02-4A32-40B3-BE3D-053D78DBFEB6.heic
docs/architecture/: backend-runtime.md  repo-structure.md
docs/archive/: backend-user-data-architecture-plan.md  baseline-checks.md  image-pipeline-plan.md  reactApp_plan.md
docs/runbooks/: local-dev.md  (+1 more)
mobile/: README.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
secrets/: .env  .env.example
tests/: test_detector.py  test_extractor.py  test_library_api.py  test_lookup.py  test_web_api.py
web-harness/: README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
(+114 files in other folders)
